tests/sksl/errors/BooleanArithmetic.dsl.glsl
### Compilation failed:

error: type mismatch: '+' cannot operate on 'bool', 'bool'

error: type mismatch: '-' cannot operate on 'bool', 'bool'

error: type mismatch: '*' cannot operate on 'bool', 'bool'

error: type mismatch: '/' cannot operate on 'bool', 'bool'

error: type mismatch: '%' cannot operate on 'bool', 'bool'

error: type mismatch: '<<' cannot operate on 'bool', 'bool'

error: type mismatch: '>>' cannot operate on 'bool', 'bool'

error: '-' cannot operate on 'bool'

error: '~' cannot operate on 'bool'

error: type mismatch: '&' cannot operate on 'bool', 'bool'

error: type mismatch: '|' cannot operate on 'bool', 'bool'

error: type mismatch: '^' cannot operate on 'bool', 'bool'

error: type mismatch: '+' cannot operate on 'bool2', 'bool2'

error: type mismatch: '-' cannot operate on 'bool2', 'bool2'

error: type mismatch: '*' cannot operate on 'bool2', 'bool2'

error: type mismatch: '/' cannot operate on 'bool2', 'bool2'

error: type mismatch: '%' cannot operate on 'bool2', 'bool2'

error: type mismatch: '<<' cannot operate on 'bool2', 'bool2'

error: type mismatch: '>>' cannot operate on 'bool2', 'bool2'

error: '!' cannot operate on 'bool2'

error: '-' cannot operate on 'bool2'

error: '~' cannot operate on 'bool2'

error: type mismatch: '&' cannot operate on 'bool2', 'bool2'

error: type mismatch: '|' cannot operate on 'bool2', 'bool2'

error: type mismatch: '^' cannot operate on 'bool2', 'bool2'

25 errors
